[package]
name = "ff-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "FlowFabric server library and HTTP binary"

[features]
# Re-exports of ferriskey feature flags. Consumers opt in on ff-server
# and the flag propagates to the underlying ferriskey crate. OFF by
# default.
iam = ["ferriskey/iam"]

[dependencies]
ff-core = { workspace = true }
ff-script = { workspace = true }
ff-engine = { workspace = true }
ff-scheduler = { workspace = true }
ferriskey = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
# Used by CORS preflight tests in `api::cors_tests` (#66, #71) — exercises
# the layer via `tower::ServiceExt::oneshot`, which is the integration-style
# harness that mirrors real browser preflights.
tower = { version = "0.5", features = ["util"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
