[package]
name = "ff-test"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "FlowFabric integration test harness, fixtures, and assertion helpers"

# Skip cargo-release version bumps — dev-only, never published.
[package.metadata.release]
release = false

[dependencies]
ff-core = { workspace = true }
ff-engine = { workspace = true }
ff-scheduler = { workspace = true }
ff-script = { workspace = true }
ff-sdk = { workspace = true, features = ["direct-valkey-claim"] }
# Promoted from dev-dependencies in #87 closure (Stage 1c tranche-4):
# `TestCluster::backend()` minting lives in the fixtures library so
# tests can exercise the trait-forwarded read_stream/tail_stream.
ff-backend-valkey = { workspace = true }
ferriskey = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ff-server = { workspace = true }
serial_test = "3"
axum = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = { workspace = true }
