[package]
name = "ff-test"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "FlowFabric integration test harness, fixtures, and assertion helpers"

# Skip cargo-release version bumps — dev-only, never published.
[package.metadata.release]
release = false

[dependencies]
ff-core = { workspace = true }
ff-engine = { workspace = true }
ff-scheduler = { workspace = true }
# Issue #171: test fixtures use FCALL helpers + ferriskey::Value parsers.
ff-script = { workspace = true, features = ["valkey-client"] }
ff-sdk = { workspace = true, features = ["direct-valkey-claim"] }
# Promoted from dev-dependencies in #87 closure (Stage 1c tranche-4):
# `TestCluster::backend()` minting lives in the fixtures library so
# tests can exercise the trait-forwarded read_stream/tail_stream.
ff-backend-valkey = { workspace = true }
# RFC-v0.7 Wave 4a: integration tests against the Postgres backend
# live under ff-test/ so a future dual-backend CI matrix can drive
# both from one crate. The Postgres tests are `#[ignore]`d and only
# run when `FF_PG_TEST_URL` is set — no live pg needed for default
# `cargo test -p ff-test`.
ff-backend-postgres = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls"] }
ferriskey = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# RFC-016 Stage E asserts metric emission end-to-end. The `observability`
# feature on ff-server transitively enables `ff-observability/enabled` +
# the ff-engine/ff-scheduler observability features so real instruments
# back `Metrics::new()` instead of the no-op shim. Dev-only — production
# callers of ff-server flip this via their own feature.
ff-server = { workspace = true, features = ["observability"] }
ff-observability = { workspace = true, features = ["enabled"] }
serial_test = "3"
axum = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = { workspace = true }
# Issue #154 — tracing span capture in the observability wiring test.
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }
# Wave 4c/4f/4g/4h: live Postgres integration tests for flow + budget +
# admin/list + CompletionBackend surfaces. Gated on `FF_PG_TEST_URL` at
# runtime (tests are `#[ignore]` by default).
ff-backend-postgres = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls", "uuid", "macros", "migrate", "json"] }
