[workspace]

[package]
name = "media-pipeline"
version = "0.1.0"
edition = "2024"

[lib]
name = "media_pipeline"
path = "src/lib.rs"

[[bin]]
name = "transcribe"
path = "src/bin/transcribe.rs"

[[bin]]
name = "summarize"
path = "src/bin/summarize.rs"

[[bin]]
name = "embed"
path = "src/bin/embed.rs"

[[bin]]
name = "submit"
path = "src/bin/submit.rs"

[[bin]]
name = "review"
path = "src/bin/review.rs"

[dependencies]
ff-core = { path = "../../crates/ff-core" }
ff-sdk = { path = "../../crates/ff-sdk" }
ferriskey = { path = "../../ferriskey" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util", "io-std", "signal", "fs", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
llama-cpp-2 = { version = "0.1", default-features = false }
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls", "image-models"] }
num_cpus = "1"
