[workspace]

[package]
name = "token-budget-example"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "token-budget"
path = "src/main.rs"

[dependencies]
# v0.9 umbrella crate (#279) — one pin covers ff-core, ff-sdk, the
# Valkey backend, and ff-script. Consumer-visible imports go through
# `flowfabric::*` paths; no direct `ff-*` pins.
#
# Path-dep while v0.9 is pre-publish. After v0.9.0 ships:
# flowfabric = { version = "0.9", default-features = false, features = ["valkey"] }
flowfabric = { path = "../../crates/flowfabric", default-features = false, features = ["valkey"] }

anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rand = "0.8"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
