[workspace]

[package]
name = "umbrella-quickstart-example"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "umbrella-quickstart"
path = "src/main.rs"

[dependencies]
# The ONLY FlowFabric pin — umbrella crate (#279). Pre-publish path
# dep mirrors `examples/retry-and-cancel`'s pattern; after v0.9.0
# ships to crates.io, consumers flip this to
#   flowfabric = { version = "0.9", default-features = false, features = ["valkey"] }
# without touching anything else in this file.
flowfabric = { path = "../../crates/flowfabric", default-features = false, features = ["valkey"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
